fixed the button for warning trigger

--- a/test-page.html
+++ b/test-page.html
@@ -76,6 +76,8 @@
             <button class="normal-button" onclick="alert('This should work normally')">Add to Cart</button>
             <button class="normal-button" onclick="alert('This should work normally')">View Details</button>
             <button class="normal-button" onclick="alert('This should work normally')">Save for Later</button>
+            <button class="normal-button" onclick="alert('This should work normally')">Buy Gift Card</button>
+            <button class="normal-button" onclick="alert('This should work normally')">Subscribe to Newsletter</button>
         </div>
         
         <div style="margin-top: 40px; padding: 20px; background: #fff3cd; border-radius: 5px;">
